# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
diff_calc/scripts/: gendiff.py
gendiff/: file_parser.py  generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
