[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = "Project Difference Calculator"
authors = ["rosoporto <rosoporto@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/rosoporto/python-project-50.git"
packages = [{ include = "diff_calc" },]


[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"


[tool.poetry.scripts]
gendiff = "diff_calc.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
