[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = "Project Difference Calculator"
authors = ["rosoporto <rosoporto@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/rosoporto/python-project-50.git"
packages = [{ include = "gendiff" },]


[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
